cmake_minimum_required(VERSION 3.27)
project(LuoGu)
set(CMAKE_CXX_STANDARD 23)
add_executable(LuoGu main.cpp)
function(set_problems LIB_NAME TARGET_NAME)
    add_library(${LIB_NAME} SHARED "${TARGET_NAME}/Solution.cpp")
    set_target_properties(${LIB_NAME} PROPERTIES OUTPUT_NAME "${TARGET_NAME}")
    set_target_properties(${LIB_NAME} PROPERTIES PREFIX "")
    set_target_properties(${LIB_NAME} PROPERTIES IMPORT_PREFIX "")
    target_link_libraries(LuoGu PRIVATE ${LIB_NAME})
    set(MD_DEST "${CMAKE_BINARY_DIR}/${TARGET_NAME}.md")
    configure_file("${CMAKE_SOURCE_DIR}/${TARGET_NAME}/Problem.md" "${MD_DEST}" COPYONLY)
    add_executable(${TARGET_NAME} "${TARGET_NAME}/Solution.cpp")
endfunction()
set(TARGET_LIST p1000 p1001 p1002 p3954 p5708 p5706 p5705 p5703 p5707 p2670 p1421 p1425 b2002 b2005 b2025 b2029 p2433
        p5709 p5710 p5711 p5712 p5713 p5714 p2676 p1152 p1271 p1177 p1923 p1059 p1093)
foreach (TARGET_NAME ${TARGET_LIST})
    set_problems(${TARGET_NAME}_lib ${TARGET_NAME})
endforeach ()